# TXTReader

./: CMakeLists.txt  context_menu.cpp  context_menu.h  description.txt  main.cpp  main_window.cpp  main_window.h  novel_manager.cpp  novel_manager.h  novel_view.cpp  novel_view.h  splitter.cpp  splitter.h  vcpkg.json
.github/workflows/: windows.yaml
